--- a/webpage/css/webflow.css
+++ b/webpage/css/webflow.css
@@ -983,7 +983,7 @@ textarea.w-select {
 }
 .w-slider {
   position: relative;
-  height: 300px;
+  height: auto;
   text-align: center;
   clear: both;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -996,7 +996,7 @@ textarea.w-select {
   z-index: 1;
   left: 0;
   right: 0;
-  height: 100%;
+  height: auto;
   white-space: nowrap;
 }
 .w-slide {
@@ -1004,7 +1004,7 @@ textarea.w-select {
   display: inline-block;
   vertical-align: top;
   width: 100%;
-  height: 100%;
+  height: auto;
   white-space: normal;
   text-align: left;
 }
