--- a/whatsnear/assets/css/main.css
+++ b/whatsnear/assets/css/main.css
@@ -3,28 +3,34 @@
  */
 body{
 	margin: 0px;
+    background: url(../img/back.png) repeat;
 }
 .header{
-	background-position: 0px -200px;
 	text-align: center;
-	background-size: 100% 120%;
-	height: 100vh;
-	background-image: url(../img/back.png);
 }
 .header div{
 	position: relative;
-	margin: auto;
-	top: 50%;
 }
 h1{
-	color:white;
+	color:blue;
 }
 .img-responsive{
 	max-width: 100%;
 }
-#chart_div{
-	height: 100vh;
+.chart{
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: aliceblue;
+    height: 400px;
 }
-#chart_div2{
-	height: 100vh;
+.headerRow{
+	background-color: rgba(0,0,0,0.3);
+    padding-top: 2%;
+}
+.headerRow img{
+    max-width: 100%;
+}
+.modal-header{
+    background-color: indianred
 }
