Commit Web v2 #4 Textarea

--- a/webpage/css/webflow.css
+++ b/webpage/css/webflow.css
@@ -1930,6 +1930,6 @@ textarea{
   border-left: 1px solid black !important;
 }
 textarea:focus {
-  border-color: #3898ec;
-  outline: 0;
+  border-color: #3898ec !important;
+  outline: 0 !important;
 }
